fixed add questions endpoint